<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.scene.PersonalFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textViewClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/myclass" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarHP"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/textViewHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="100/100"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="?android:attr/textSelectHandle" />

        <TextView
            android:id="@+id/textViewAttack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="10"
            android:textAlignment="viewStart" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_lock_lock" />

        <TextView
            android:id="@+id/textViewProtection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="5"
            android:textAlignment="textStart" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewPersonalImg"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:visibility="gone"
        app:srcCompat="@mipmap/ic_launcher"
        tools:src="@tools:sample/avatars[3]" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_class"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonAttack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonPropertis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/propertis"
        android:textAllCaps="false" />
</LinearLayout>